# cstor-rs

./: Cargo.toml  Justfile  README.md
.config/: nextest.toml
.github/workflows/: build.yml
crates/cstor-rs/: Cargo.toml
crates/cstor-rs/examples/: ipc_reflink.rs  pull_image.rs
crates/cstor-rs/src/: client.rs  config.rs  error.rs  extract.rs  generic_tree.rs  image.rs  image_store.rs  layer.rs  layer_builder.rs  layer_store.rs  lib.rs  lockfile.rs  proxy_v2.rs  server.rs  splitfdstream.rs  storage.rs  tar_split.rs  tar_split_writer.rs  tar_writer.rs  toc.rs  userns.rs  userns_helper.rs  validate.rs
crates/cstor-rs/tests/: integration_test.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: fixture.rs  lib.rs  main.rs
crates/integration-tests/src/tests/: cli.rs  extract.rs  layer_builder.rs  layer_store.rs  mod.rs  tar_split_writer.rs  validate.rs
docs/: COMPATIBILITY.md  TODO.md  ai-notes.md  layer-splitting-design.md  proxy-v2-design.md  use-cases-analysis.md
docs/todo/: tarsplit-fdpass.md
examples/: ipc_reflink.rs
src/: client.rs  error.rs  image.rs  layer.rs  lib.rs  protocol.rs  proxy_v2.rs  readatreader.rs  server.rs  storage.rs  tar_split.rs  tar_writer.rs  toc.rs
tests/: README.md  integration_test.rs
