[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
# Require an extra opt-in for unsafe
unsafe_code = "deny"
# Absolutely must handle errors
unused_must_use = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
# Feel free to comment this one out locally during development of a patch.
dead_code = "deny"

[workspace.lints.clippy]
# These should only be in local code
dbg_macro = "deny"
todo = "deny"
# These two are in my experience the lints which are most likely
# to trigger, and among the least valuable to fix.
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"

[workspace.dependencies]
# Internal crates
cstor-rs = { path = "crates/cstor-rs" }

# Core dependencies
cap-std = "3.0"
cap-std-ext = "4.0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
flate2 = "1.0"
clap = { version = "4.5", features = ["derive"] }
tar = "0.4"
base64 = "0.21"
crc = "3.0"
sha2 = "0.10"
oci-spec = "0.8.3"
ocidir = "0.6.0"
camino = "1.2.1"
rustix = { version = "1.0", features = ["fs", "process", "thread"] }
rustix-linux-procfs = "0.1"
comfy-table = "7.2"
facet = { version = "0.43", features = ["reflect"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
tracing = "0.1"
tokio = { version = "1.40", features = ["full"] }
jsonrpc-fdpass = { git = "https://github.com/cgwalters/jsonrpc-fdpass", rev = "c8b4aa54afa433541d83f1cb5436b44842a21e68" }

# Dev/test dependencies
tempfile = "3.0"
xshell = "0.2"
color-eyre = "0.6"
linkme = "0.3"
paste = "1.0"
libtest-mimic = "0.8"
uuid = { version = "1", features = ["v4"] }
